# kdna

./: .gitattributes  .gitignore  .prettierignore  AUDIT_EVIDENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONFORMANCE.md  CONTRIBUTING.md  FORK_POLICY.md  LICENSE  MIGRATION.md  NOTICE  PUBLISHING_EXAMPLE.md  README.md  README.zh.md  RELEASE_CHECKLIST_0.9.0.md  SECURITY.md  SPEC.md  START_HERE.md  STATE_OF_KDNA.md  TRADEMARK.md  ecosystem-manifest.json  eslint.config.mjs  package-lock.json  package.json  release-health-policy.json
.github/: pull_request_template.md
articles/: ai-agents-need-domain-judgment.md
benchmarks/: BENCHMARK_SUMMARY.md  agent_safety-comparison-report-MiniMax-M2.7.md  agent_safety-comparison-report-anthropic-claude-opus-4.7.md  agent_safety-comparison-report-deepseek-deepseek-v4-pro.md  agent_safety-comparison-report-google-gemini-3.5-flash.md  agent_safety-comparison-report-openai-gpt-5.5.md  agent_safety-comparison-report-qwen-qwen3.7-max.md  agent_safety-comparison-report.md  decision-state-benchmark.json  decision-state-comparison-report.md  eval-agent-safety.mjs  eval-decision-state.js  eval-runner.sh  judgment-benchmark.json
conformance/: EXPECTED.md  README.md  canonical-conformance.mjs  envelope-aead.mjs  kdna-envelope-aead-v1.mjs  phase2-protocol.mjs  run.mjs
decisions/: 0001-hard-cutover-no-legacy.md  (+5 more)
demos/: 01-writing.md  (+3 more)
python-sdk/: README.md  pyproject.toml  setup.py
python-sdk/examples/: basic_usage.py  custom_agent.py
python-sdk/kdna/: __init__.py  context.py  loader.py
python-sdk/tests/: test_loader.py
(+912 files in other folders)
