[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdna-sdk"
version = "0.1.0"
description = "KDNA Protocol Python SDK"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1"]
