[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdna"
version = "0.4.0"
description = "KDNA Protocol Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = ["pytest>=8", "black>=24", "mypy>=1"]

[tool.setuptools.packages.find]
include = ["kdna*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
