[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdna"
version = "0.5.0"
description = "Python adapter for the official KDNA CLI and Runtime Capsule contract"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = ["pytest>=8", "black>=24", "mypy>=1"]

[tool.setuptools.packages.find]
include = ["kdna*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
